# uUTF8

./: .gitignore  CMakeLists.txt  README.md
include/: uUTF8.h  uUTF8_FI.h
src/: uUTF8.c  uUTF8_FI.c
tests/: main.c  test-file.txt  test-main.c  test-main.h  test-src.txt  test_decoding.c  test_findSubstring.c
